--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -6,12 +6,15 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.min.js" integrity="sha512-d9xgZrVZpmmQlfonhQUvTR7lMPtO7NkZMkA0ABN3PHCbKA5nqylQ/yWlFAyY6hYgdF1Qh6nYiuADWwKB4C2WSw==" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.min.css" integrity="sha512-/zs32ZEJh+/EO2N1b0PEdoA10JkdC3zJ8L5FTiQu82LR9S/rOQNfQN7U59U9BC12swNeRAz3HSzIL2vpp4fv3w==" crossorigin="anonymous" />
 <div class="text-center">
+    <h3 id="totalhits"></h3>
+    <h3 id="totalmisses"></h3>
+    <h3 id="hitmiss"></h3>
     <h3 id="totaltotal"></h3>
     <h3 id="totalspent"></h3>
     <h3 id="totalgain"></h3>
     <canvas id="myChart"></canvas>
     <canvas id="ordersChart"></canvas>
     <h3 id="total"></h3>
-    <h3 id="buysoutstanding"></h3>
-    <h3 id="outstanding"></h3>
+    <h3 id="hits"></h3>
+    <h3 id="misses"></h3>
 </div>
